# x4-analysis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
data/: modules.csv  recipes.csv
docs/: analytics-ideas.md  continuous-construction-demand.md  csv-reference.md  db-schema.md  player-view-plan.md  resource-depletion-model.md  resource-extraction-plan.md  resource-gauge-accuracy-plan.md  save-xml-coverage.md  savegame-structure.md  sqlite-orm-feasibility.md  sqlite-schema.md  weapon-heat-and-rate-bug-2026-07.md  wormhole-connection-model.md
docs/models/: faction-relations-model.md  resource-depletion-model.md  wormhole-connection-model.md
docs/plans/: analytics-ideas.md  data-model-review.md  db-model-improvements.md  execution-roadmap.md
docs/reference/: architecture.md  csv-reference.md  db-schema.md  save-semantics.md  savegame-structure.md  viz-internals.md
docs/reports/: phase1-derisk-probes.md  phase2-v11-bump.md
packaging/: entry.py
src/x4analyzer/: __init__.py  __main__.py  analyze.py  caches.py  cli.py  config.py  dashboard.py  dbschema.py  frames.py  gamedata.py  logparse.py  refdata.py  saveparser.py  sectorgraph.py  store.py  textdb.py
src/x4analyzer/db/: caches.py  (+2 more)
tests/: test_caches.py  test_catalog.py  test_diplomacy.py  test_drones.py  test_landmarks.py  test_logparse.py  test_map_prep.py  test_merge_guard.py  test_migrations.py  test_mining.py  test_opportunities.py  test_saveparser.py  test_sectorgraph.py  test_storage.py  test_store.py  test_textdb.py  test_weapons.py  test_weaponsim.py
(+47 files in other folders)
